# Velwin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh
Editor/: CMakeLists.txt
Editor/src/: editor.cpp
Engine/: CMakeLists.txt
Engine/src/: Velwin.h  engine.cpp
Engine/src/Velwin/: Application.h  Core.h  EntryPoint.h  Event.h  Log.cpp  Log.h  Window.cpp  Window.h
Engine/src/Velwin/Core/: Api.h  Base.h
Engine/src/Velwin/Platform/: GlfwWindow.cpp  GlfwWindow.h
Sandbox/: CMakeLists.txt  cmake_stinky.h  main.cpp
editor/: CMakeLists.txt
editor/src/: Editor.cpp
engine/: CMakeLists.txt  cmake_stinky.cpp
engine/src/Velwin/: Application.cpp  EntryPoint.h  Log.h
